Add KKlama Demo. Wprkshop preparation for JavaLand 2026.